--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,125 +19,142 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a class="logo link" href="./index.html"
-          >Web<span class="studio">Studio</span></a
-        >
-        <ul class="navigation_list list">
-          <li>
-            <a class="navigation_item link" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="navigation_item link" href="./portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-          <li><a class="navigation_item link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="adress_general">
-        <ul class="adress list">
-          <li>
-            <a class="adress_item link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="adress_item link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="header_section">
+      <div class="container header_wrapper">
+        <nav class="navigation_section">
+          <a class="logo link" href="./index.html"
+            >Web<span class="studio">Studio</span></a
+          >
+          <ul class="navigation_list list">
+            <li class="navigation_item_list">
+              <a class="navigation_item link" href="./index.html">Studio</a>
+            </li>
+            <li class="navigation_item_list">
+              <a class="navigation_item link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li class="navigation_item_list">
+              <a class="navigation_item link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="adress_general">
+          <ul class="adress list">
+            <li class="adress_site">
+              <a class="adress_item link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="adress_tel">
+              <a class="adress_item link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="mainSection">
-        <h1 class="titleMainSection">Effective Solutions for Your Business</h1>
-        <button class="btn_ord" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="titleMainSection">
+            Effective Solutions for Your Business
+          </h1>
+          <button class="btn_ord" type="button">Order Service</button>
+        </div>
       </section>
+
       <section class="features">
-        <h2 class="features_title">Features</h2>
-        <ul class="list">
-          <li>
-            <h3 class="featuresSubtitle">Strategy</h3>
-            <p class="featuresDescription">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="featuresSubtitle">Punctuality</h3>
-            <p class="featuresDescription">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="featuresSubtitle">Diligence</h3>
-            <p class="featuresDescription">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="featuresSubtitle">Technologies</h3>
-            <p class="featuresDescription">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="features_list list">
+            <li class="features_item">
+              <h3 class="featuresSubtitle">Strategy</h3>
+              <p class="featuresDescription">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features_item">
+              <h3 class="featuresSubtitle">Punctuality</h3>
+              <p class="featuresDescription">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features_item">
+              <h3 class="featuresSubtitle">Diligence</h3>
+              <p class="featuresDescription">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features_item">
+              <h3 class="featuresSubtitle">Technologies</h3>
+              <p class="featuresDescription">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
+
       <section class="works">
-        <h2 class="titleWorks">What are we doing</h2>
-        <ul class="works_list list">
-          <li>
-            <img src="./images/desktop.jpg" alt="desctop" width="360" />
-          </li>
-          <li>
-            <img src="./images/mobile.jpg" alt="desctop" width="360" />
-          </li>
-          <li>
-            <img src="./images/mix.jpg" alt="adaptive" width="360" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="titleWorks">What are we doing</h2>
+          <ul class="works_list list">
+            <li class="work_photo">
+              <img src="./images/desktop.jpg" alt="desctop" width="360" />
+            </li>
+            <li class="work_photo">
+              <img src="./images/mobile.jpg" alt="desctop" width="360" />
+            </li>
+            <li class="work_photo">
+              <img src="./images/mix.jpg" alt="adaptive" width="360" />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="titleTeam">Our Team</h2>
-        <ul class="list">
-          <li class="workers">
-            <img src="./images/beard.jpg" alt="man" width="264" />
-            <h3 class="titleWorkers">Mark Guerrero</h3>
-            <p class="descriptionWorkers">Product Designer</p>
-          </li>
-          <li class="workers">
-            <img src="./images/small_beard.jpg" alt="man" width="264" />
-            <h3 class="titleWorkers">Tom Ford</h3>
-            <p class="descriptionWorkers">Frontend Developer</p>
-          </li>
-          <li class="workers">
-            <img src="./images/woman.jpg" alt="woman" width="264" />
-            <h3 class="titleWorkers">Camila Garcia</h3>
-            <p class="descriptionWorkers">Marketing</p>
-          </li>
-          <li class="workers">
-            <img src="./images/medium_beard.jpg" alt="man" width="264" />
-            <h3 class="titleWorkers">Daniel Wilson</h3>
-            <p class="descriptionWorkers">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="titleTeam">Our Team</h2>
+          <ul class="list_team list">
+            <li class="workers">
+              <img src="./images/beard.jpg" alt="man" width="264" />
+              <h3 class="titleWorkers">Mark Guerrero</h3>
+              <p class="descriptionWorkers">Product Designer</p>
+            </li>
+            <li class="workers">
+              <img src="./images/small_beard.jpg" alt="man" width="264" />
+              <h3 class="titleWorkers">Tom Ford</h3>
+              <p class="descriptionWorkers">Frontend Developer</p>
+            </li>
+            <li class="workers">
+              <img src="./images/woman.jpg" alt="woman" width="264" />
+              <h3 class="titleWorkers">Camila Garcia</h3>
+              <p class="descriptionWorkers">Marketing</p>
+            </li>
+            <li class="workers">
+              <img src="./images/medium_beard.jpg" alt="man" width="264" />
+              <h3 class="titleWorkers">Daniel Wilson</h3>
+              <p class="descriptionWorkers">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer_main">
-      <a class="logo_footer link" href="./index.html"
-        >Web<span class="footer_logo_span">Studio</span></a
-      >
-      <p class="footer_p">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo_footer link" href="./index.html"
+          >Web<span class="footer_logo_span">Studio</span></a
+        >
+        <p class="footer_p">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
