--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       </div>
     </header>
     <main>
-      <section class="mainSection">
+      <section class="main_section">
         <div class="container">
-          <h1 class="titleMainSection">
+          <h1 class="title_main_section">
             Effective Solutions for Your Business
           </h1>
           <button class="btn_ord" type="button">Order Service</button>
@@ -67,7 +67,7 @@
 
       <section class="features">
         <div class="container">
-          <ul class="features_list list">
+          <ul class="features_ul list">
             <li class="features_item">
               <h3 class="featuresSubtitle">Strategy</h3>
               <p class="featuresDescription">
