--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       </section>
 
       <section class="features">
+        <h2 class="features_title">Features</h2>
         <div class="container">
           <ul class="features_ul list">
             <li class="features_item">
