--- a/index.html
+++ b/index.html
@@ -70,29 +70,29 @@
         <div class="container">
           <ul class="features_ul list">
             <li class="features_item">
-              <h3 class="featuresSubtitle">Strategy</h3>
-              <p class="featuresDescription">
+              <h3 class="features_subtitle">Strategy</h3>
+              <p class="features_description">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="features_item">
-              <h3 class="featuresSubtitle">Punctuality</h3>
-              <p class="featuresDescription">
+              <h3 class="features_subtitle">Punctuality</h3>
+              <p class="features_description">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="features_item">
-              <h3 class="featuresSubtitle">Diligence</h3>
-              <p class="featuresDescription">
+              <h3 class="features_subtitle">Diligence</h3>
+              <p class="features_description">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="features_item">
-              <h3 class="featuresSubtitle">Technologies</h3>
-              <p class="featuresDescription">
+              <h3 class="features_subtitle">Technologies</h3>
+              <p class="features_description">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -103,7 +103,7 @@
 
       <section class="works">
         <div class="container">
-          <h2 class="titleWorks">What are we doing</h2>
+          <h2 class="title_works">What are we doing</h2>
           <ul class="works_list list">
             <li class="work_photo">
               <img src="./images/desktop.jpg" alt="desctop" width="360" />
@@ -119,27 +119,35 @@
       </section>
       <section class="team">
         <div class="container">
-          <h2 class="titleTeam">Our Team</h2>
+          <h2 class="title_team">Our Team</h2>
           <ul class="list_team list">
             <li class="workers">
               <img src="./images/beard.jpg" alt="man" width="264" />
-              <h3 class="titleWorkers">Mark Guerrero</h3>
-              <p class="descriptionWorkers">Product Designer</p>
+              <div class="container_team">
+                <h3 class="title_workers">Mark Guerrero</h3>
+                <p class="description_workers">Product Designer</p>
+              </div>
             </li>
             <li class="workers">
               <img src="./images/small_beard.jpg" alt="man" width="264" />
-              <h3 class="titleWorkers">Tom Ford</h3>
-              <p class="descriptionWorkers">Frontend Developer</p>
+              <div class="container_team">
+                <h3 class="title_workers">Tom Ford</h3>
+                <p class="description_workers">Frontend Developer</p>
+              </div>
             </li>
             <li class="workers">
               <img src="./images/woman.jpg" alt="woman" width="264" />
-              <h3 class="titleWorkers">Camila Garcia</h3>
-              <p class="descriptionWorkers">Marketing</p>
+              <div class="container_team">
+                <h3 class="title_workers">Camila Garcia</h3>
+                <p class="description_workers">Marketing</p>
+              </div>
             </li>
             <li class="workers">
               <img src="./images/medium_beard.jpg" alt="man" width="264" />
-              <h3 class="titleWorkers">Daniel Wilson</h3>
-              <p class="descriptionWorkers">UI Designer</p>
+              <div class="container_team">
+                <h3 class="title_workers">Daniel Wilson</h3>
+                <p class="description_workers">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
