second page fix

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </header>
     <main>
-      <section class="main_section">
+      <section class="effective_section">
         <div class="container">
           <h1 class="title_main_section">
             Effective Solutions for Your Business
