--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/modern-normalize.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -56,8 +59,8 @@
       </div>
     </header>
     <main>
-      <div class="container">
-        <section class="main_section">
+      <section class="main_section">
+        <div class="container">
           <ul class="buttons_filtr list">
             <li class="button_portfolio_li">
               <button type="button" class="button_filtr">All</button>
@@ -203,8 +206,8 @@
               </a>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer_main">
