--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,7 @@
     <main>
       <section class="main_section">
         <div class="container">
+          <h2 class="features_title">Features</h2>
           <ul class="buttons_filtr list">
             <li class="button_portfolio_li">
               <button type="button" class="button_filtr">All</button>
