--- a/portfolio.html
+++ b/portfolio.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -61,7 +62,7 @@
     <main>
       <section class="main_section">
         <div class="container">
-          <h2 class="features_title">Features</h2>
+          <h1 class="features_title">Features</h1>
           <ul class="buttons_filtr list">
             <li class="button_portfolio_li">
               <button type="button" class="button_filtr">All</button>
@@ -89,7 +90,7 @@
                   width="360"
                 />
                 <div class="content_photo">
-                  <h2 class="titlePhoto">Banking App Interface Concept</h2>
+                  <h2 class="title_photo">Banking App Interface Concept</h2>
                   <p class="descriptionPhoto">App</p>
                 </div>
               </a>
@@ -103,7 +104,7 @@
                   width="360"
                 />
                 <div class="content_photo">
-                  <h2 class="titlePhoto">Cashless Payment</h2>
+                  <h2 class="title_photo">Cashless Payment</h2>
                   <p class="descriptionPhoto">Marketing</p>
                 </div>
               </a>
@@ -117,7 +118,7 @@
                   width="360"
                 />
                 <div class="content_photo">
-                  <h2 class="titlePhoto">Meditation App</h2>
+                  <h2 class="title_photo">Meditation App</h2>
                   <p class="descriptionPhoto">App</p>
                 </div>
               </a>
@@ -131,7 +132,7 @@
                   width="360"
                 />
                 <div class="content_photo">
-                  <h2 class="titlePhoto">Taxi Service</h2>
+                  <h2 class="title_photo">Taxi Service</h2>
                   <p class="descriptionPhoto">Marketing</p>
                 </div>
               </a>
@@ -145,7 +146,7 @@
                   width="360"
                 />
                 <div class="content_photo">
-                  <h2 class="titlePhoto">Screen Illustrations</h2>
+                  <h2 class="title_photo">Screen Illustrations</h2>
                   <p class="descriptionPhoto">Design</p>
                 </div>
               </a>
@@ -159,7 +160,7 @@
                   width="360"
                 />
                 <div class="content_photo">
-                  <h2 class="titlePhoto">Online Courses</h2>
+                  <h2 class="title_photo">Online Courses</h2>
                   <p class="descriptionPhoto">Marketing</p>
                 </div>
               </a>
@@ -173,7 +174,7 @@
                   width="360"
                 />
                 <div class="content_photo">
-                  <h2 class="titlePhoto">Instagram Stories Concept</h2>
+                  <h2 class="title_photo">Instagram Stories Concept</h2>
                   <p class="descriptionPhoto">Design</p>
                 </div>
               </a>
@@ -187,7 +188,7 @@
                   width="360"
                 />
                 <div class="content_photo">
-                  <h2 class="titlePhoto">Organic Food</h2>
+                  <h2 class="title_photo">Organic Food</h2>
                   <p class="descriptionPhoto">Web Site</p>
                 </div>
               </a>
@@ -201,7 +202,7 @@
                   width="360"
                 />
                 <div class="content_photo">
-                  <h2 class="titlePhoto">Fresh Coffee</h2>
+                  <h2 class="title_photo">Fresh Coffee</h2>
                   <p class="descriptionPhoto">Web Site</p>
                 </div>
               </a>
